--- a/templates/chat.html
+++ b/templates/chat.html
@@ -23,12 +23,12 @@
 
 
 
-    <div class="fixed lg:w-[55%] w-[95%] top-0 z-10 flex justify-between gap-2 items-center py-2 dark:bg-gray-900 bg-white">
+    <div class="fixed lg:w-[55%] w-full top-0 z-10 flex justify-between gap-2 items-center py-2 dark:bg-gray-900 bg-white">
       <a href="/" class="text-xl font-bold p-4">ChatKaroo (Beta)</a>
 
       <span id="status"></span>
 
-      <div class="flex items-center gap-4">
+      <div class="flex items-center gap-4 pr-4">
 
         <button id="undoBtn" onclick="undo()" type="button"
         class=" text-gray-500 dark:text-gray-200 hover:dark:bg-blue-500 hover:bg-blue-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-md text-sm px-2 py-1 bg-gray-100 dark:bg-gray-700">
