--- a/templates/chat.html
+++ b/templates/chat.html
@@ -23,24 +23,25 @@
 
 
 
-    <div class="fixed lg:w-[55%] w-full top-0 z-10 flex justify-between gap-2 items-center py-2 dark:bg-gray-900 bg-white">
-      <a href="/" class="text-xl font-bold p-4">ChatKaroo (Beta)</a>
+    <div
+      class="fixed lg:w-[55%] w-full top-0 z-10 flex justify-between gap-2 items-center py-2 dark:bg-gray-900 bg-white px-4">
+      <a href="/" class="text-xl font-bold">ChatKaroo (Beta)</a>
 
       <span id="status"></span>
 
-      <div class="flex items-center gap-4 pr-4">
+      <div class="flex items-center gap-4 p-4">
 
         <button id="undoBtn" onclick="undo()" type="button"
-        class=" text-gray-500 dark:text-gray-200 hover:dark:bg-blue-500 hover:bg-blue-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-md text-sm px-2 py-1 bg-gray-100 dark:bg-gray-700">
-        <i class="text-xl w-5 h-5 bi bi-arrow-counterclockwise"></i>
-      </button>
+          class=" text-gray-500 dark:text-gray-200 hover:dark:bg-blue-500 hover:bg-blue-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-md text-sm px-2 py-1 bg-gray-100 dark:bg-gray-700">
+          <i class="text-xl w-5 h-5 bi bi-arrow-counterclockwise"></i>
+        </button>
 
 
 
         <button onclick="toggleUserModal()" type="button"
-        class="text-gray-500 dark:text-gray-200 hover:dark:bg-blue-500 hover:bg-blue-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-md text-sm px-2 py-1 bg-gray-100 dark:bg-gray-700">
-        <i class="text-xl w-5 h-5 bi bi-person-fill"></i>
-      </button>
+          class="text-gray-500 dark:text-gray-200 hover:dark:bg-blue-500 hover:bg-blue-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-md text-sm px-2 py-1 bg-gray-100 dark:bg-gray-700">
+          <i class="text-xl w-5 h-5 bi bi-person-fill"></i>
+        </button>
 
 
 
@@ -78,23 +79,28 @@
 
 
 
-    <div id="userModal" class="hidden h-screen w-screen flex items-center justify-center fixed top-0 left-0 z-30 bg-slate-600/10">
-      <div class="lg:h-[50%] lg:w-[50%] w-[90%] lg:aspect-square p-4 bg-white dark:bg-gray-800 rounded-lg shadow dark:border-none border text-gray-100">
+    <div id="userModal"
+      class="hidden h-screen w-screen flex items-center justify-center fixed top-0 left-0 z-30 bg-slate-600/10">
+      <div
+        class="lg:h-[50%] lg:w-[50%] w-[90%] lg:aspect-square p-4 bg-white dark:bg-gray-800 rounded-lg shadow dark:border-none border text-gray-100">
         <div class="p-4 md:p-5 space-y-4">
           <h1 class="text-2xl font-bold text-slate-800 dark:text-slate-100">Your Description</h1>
-          
+
           <div>
 
-            <label for="content" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white pb-2 ">Give your character description for better experience.
+            <label for="content" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white pb-2 ">Give your
+              character description for better experience.
             </label>
             <textarea id="content" name="content" rows="4"
               class="resize-none block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
               placeholder="John is a 21 year old college student..."></textarea>
 
-              <div class="flex w-full items-center gap-4 py-4">
-                <button onclick="handelUserInfoInput()" type="button" class="px-5 py-2.5 text-sm font-medium text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Update</button>
-                <button onclick="toggleUserModal()" type="button" class="px-5 py-2.5 text-sm font-medium text-blue-900 bg-blue-100 hover:bg-blue-100 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-center dark:bg-blue-100 dark:hover:bg-blue-100 dark:focus:ring-blue-800">Cancel</button> 
-              </div>
+            <div class="flex w-full items-center gap-4 py-4">
+              <button onclick="handelUserInfoInput()" type="button"
+                class="px-5 py-2.5 text-sm font-medium text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Update</button>
+              <button onclick="toggleUserModal()" type="button"
+                class="px-5 py-2.5 text-sm font-medium text-blue-900 bg-blue-100 hover:bg-blue-100 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-center dark:bg-blue-100 dark:hover:bg-blue-100 dark:focus:ring-blue-800">Cancel</button>
+            </div>
 
           </div>
         </div>
@@ -124,37 +130,34 @@
     const log = [
       {
         "role": "system",
-        "content": `roleplay to this character and situation, if there is no situation then create a random situation, the response should be short, the response should be in 2 to 3 lines, the response should be less than 80 words, the response must contain spaces between each lines or paragraph, the response should be in mardown format with good indentation an spaces between lines, the character statements should be in bold, the inner thought and feelings and action should be in italic, do not admit you are a AI or anything related to AI, just act as a real person, do not talk to your self, the user information is ${userInfo}, it is not neccessery for the character to know the user information on the begining, the character is ${incontent}`
+        "content": `roleplay to this character and situation, if there is no situation then create a random situation, the response should be short, the response should be in 2 to 3 lines, the reply should be less than 60 words, the response must contain spaces between each lines or paragraph, the response should be in mardown format, the character statements should be in bold, the inner thought and feelings and action should be in italic, do not admit you are a AI or anything related to AI, just act as a real person, do not talk to your self, the user information is ${userInfo}, it is not neccessery for the character to know the user information on the begining, the character is ${incontent}`
       }
 
     ]
 
-    
 
-    if(userInfo === null)
-    {
+
+    if (userInfo === null) {
       toggleUserModal()
     }
-    else{
+    else {
       const userdetails = userInfo;
       document.getElementById("content").value = userInfo
     }
 
 
-    function toggleUserModal()
-    {
+    function toggleUserModal() {
       userModal.classList.toggle("hidden")
     }
 
-    function undo(){
+    function undo() {
       log.pop()
       renderChatLog()
     }
 
-    function handelUserInfoInput()
-    {
+    function handelUserInfoInput() {
       const userDescription = document.getElementById("content").value
-      localStorage.setItem('userInfo', userDescription) 
+      localStorage.setItem('userInfo', userDescription)
       location.reload()
     }
 
@@ -176,36 +179,88 @@
         const li = document.createElement("div");
         if (entry.role == "user") {
 
-          li.innerHTML = `<div class="w-full flex justify-end text-black"><p class=" w-[60%] dark:bg-gray-700 dark:text-gray-300 bg-blue-100 rounded-lg p-4 text-base font-[500] text-gray-800">${entry.content}</p></div>`;
+          li.innerHTML = `
+          <div class="w-full flex flex-col gap-2 items-end text-black relative">
+            <p class=" w-[60%] dark:bg-gray-700 dark:text-gray-300 bg-blue-100 rounded-lg p-4 text-base font-[500] text-gray-800">${entry.content}</p>
+            <button class="px-2 py-1 dark:text-gray-300 rounded-md dark:bg-gray-700 bg-gray-100 hover:dark:bg-blue-500 hover:bg-blue-100" onclick="editRes(${index})">
+                  <i class="bi bi-pencil font-bold"></i>
+                </button>
+
+            <div id='edit-${index}' class="hidden absolute z-10 top-0 left-0 right-0 w-full bg-white dark:bg-gray-800 p-2 rounded-lg">
+              <textarea id="editWin-${index}" rows="10" class="focus:ring-4 focus:outline-none focus:ring-blue-500  w-[98%] bg-gry-100 rounded-lg p-4 text-[16px] font-[500] dark:text-gray-300 bg-gray-100 dark:bg-gray-800 dark:text-gray-200 text-gray-800">${entry.content}</textarea>
+              <div class="flex w-full items-center gap-4 py-4">
+              <button onclick="updateRes(${index})" type="button"
+                class="px-5 py-2.5 text-sm font-medium text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Update</button>
+              <button onclick="closeWin(${index})" type="button"
+                class="px-5 py-2.5 text-sm font-medium text-blue-900 bg-blue-100 hover:bg-blue-100 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-center dark:bg-blue-100 dark:hover:bg-blue-100 dark:focus:ring-blue-800">Cancel</button>
+            </div>
+            </div>`;
         }
         else if (entry.role == "system") {
           return null
         }
         else {
 
-          li.innerHTML = `<div class=" w-full flex flex-col gap-2 justify-start "><div class="flex  items-center"><img src="/static/${(inimg ? inimg : "user-avater.jpg")}" alt="${inname}" class="h-8 w-8 rounded-full mx-4 object-cover"><p class="text-sm font-bold">${inname}</p></div><md class="w-[98%] bg-gry-100 rounded-lg p-4 text-[16px] font-[500] dark:text-gray-300 bg-gray-100 dark:bg-gray-800 dark:text-gray-200 text-gray-800">${entry.content}</md><div class=" ${(index == (log.length - 1)) ? null : "hidden"} px-4 py-2 w-auto rounded-md flex gap-4"><button class="px-2 py-1 rounded-md dark:bg-gray-700 bg-gray-100 hover:dark:bg-blue-500 hover:bg-blue-100" onclick="revert()"><i class="bi bi-arrow-repeat"></i>
-  </button></div></div>`;
+          li.innerHTML = `
+          <div class=" w-full flex flex-col gap-2 justify-start relative ">
+            <div class="flex items-center ">
+              <img src="/static/${(inimg ? inimg : "user-avater.jpg")}" alt="${inname}" class="h-8 w-8 rounded-full mx-4 object-cover"><p class="text-sm font-bold">${inname}</p>
+              <div></div>
+            </div>
+            <div id='edit-${index}' class="hidden absolute z-10 top-0 left-0 right-0 w-full bg-white dark:bg-gray-800 p-2 rounded-lg">
+              <textarea id="editWin-${index}" rows="10" class="focus:ring-4 focus:outline-none focus:ring-blue-500  w-[98%] bg-gry-100 rounded-lg p-4 text-[16px] font-[500] dark:text-gray-300 bg-gray-100 dark:bg-gray-800 dark:text-gray-200 text-gray-800">${entry.content}</textarea>
+              <div class="flex w-full items-center gap-4 py-4">
+              <button onclick="updateRes(${index})" type="button"
+                class="px-5 py-2.5 text-sm font-medium text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Update</button>
+              <button onclick="closeWin(${index})" type="button"
+                class="px-5 py-2.5 text-sm font-medium text-blue-900 bg-blue-100 hover:bg-blue-100 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-center dark:bg-blue-100 dark:hover:bg-blue-100 dark:focus:ring-blue-800">Cancel</button>
+            </div>
+              </div>
+              <md class="w-[98%] bg-gry-100 rounded-lg p-4 text-[16px] font-[500] dark:text-gray-300 bg-gray-100 dark:bg-gray-800 dark:text-gray-200 text-gray-800">${entry.content}</md>
+              <div class=" ${(index == (log.length - 1)) ? null : "hidden"} px-4 py-2 w-auto rounded-md flex gap-4">
+                <button class="px-2 py-1 rounded-md dark:bg-gray-700 bg-gray-100 hover:dark:bg-blue-500 hover:bg-blue-100" onclick="revert()">
+                  <i class="bi bi-arrow-repeat"></i>
+                </button>
+                <button class="px-2 py-1 rounded-md dark:bg-gray-700 bg-gray-100 hover:dark:bg-blue-500 hover:bg-blue-100" onclick="editRes(${index})">
+                  <i class="bi bi-pencil"></i>
+                </button>
+              </div>
+          </div>`;
         }
-        console.log(log.length)
         chatLogElement.appendChild(li);
         chatLogElement.scrollTop = chatLogElement.scrollHeight;
 
-        if (log.length == 2)
-        {
+        if (log.length == 2) {
           undoBtn.classList.add("hidden")
         }
-        else{
-          undoBtn.classList.remove("hidden")     
+        else {
+          undoBtn.classList.remove("hidden")
         }
       });
     }
 
 
+    function editRes(index) {
+      const editWin = document.getElementById(`edit-${index}`)
+      editWin.classList.toggle("hidden")
+    }
 
+    function closeWin(index) {
+      const editWin = document.getElementById(`edit-${index}`)
+      editWin.classList.toggle("hidden")
+    }
+
+    function updateRes(index) {
+      const editWinValue = document.getElementById(`editWin-${index}`).value
+      log[index].content = editWinValue
+      const editWin = document.getElementById(`edit-${index}`)
+      editWin.classList.toggle("hidden")
+      renderChatLog()
+    }
     // Function to send data to the Flask API
     async function sendData(data) {
       status.innerHTML = '<div class="z-10 fixed lg:left-[21%] left-[10%] bottom-28" role="status"><svg aria-hidden="true" class="w-8 h-8 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/><path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/></svg><span class="sr-only">Loading...</span></div>'
-      const url ="{{hostUrl}}/gen"
+      const url = "{{hostUrl}}/gen"
 
       try {
         const response = await fetch(url, {
