--- a/templates/chat.html
+++ b/templates/chat.html
@@ -65,7 +65,7 @@
     </div>
 
 
-    <div class="w-full flex justify-center items-center fixed bottom-8 left-0 z-10 ">
+    <div class="w-full flex flex-col gap-2 justify-center items-center fixed bottom-8 left-0 z-10 ">
       <div
         class="flex lg:w-[60%] w-[88%] px-4 dark:border-none border rounded-md dark:bg-gray-700 bg-gray-100 overflow-hidden shadow-sm items-center">
         <i class="text-3xl dark:text-gray-300 text-gray-600 bi bi-person-circle"></i>
@@ -75,6 +75,7 @@
           <i class="text-3xl text-blue-500 float-right aspect-square bi bi-arrow-up-square-fill"></i>
         </button>
       </div>
+
     </div>
 
 
