--- a/templates/chat.html
+++ b/templates/chat.html
@@ -16,7 +16,20 @@
 
 </head>
 
+
+<!-- Google tag (gtag.js) -->
+
 <body class="flex justify-center relative font-[raleway] dark:bg-gray-900 dark:text-slate-50">
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FN6KFJ66T9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FN6KFJ66T9');
+</script>
+
 
 
 
