--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,16 @@
 
 </head>
 
+
 <body class="lg:p-8 p-4 font-[raleway]  dark:bg-gray-900 dark:text-slate-50">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FN6KFJ66T9"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-FN6KFJ66T9');
+    </script>
 
 
     <div class=" flex w-full gap-2 items-center justify-between">
@@ -167,6 +176,11 @@
             })
             .catch(error => console.error('Error fetching data:', error));
     </script>
+
+
+
+
+
 </body>
 
 </html>
