--- a/templates/index.html
+++ b/templates/index.html
@@ -119,6 +119,7 @@
 
     <main class="mt-4">
 
+        
         <div class="grid lg:grid-cols-8 grid-cols-1 lg:gap-8 gap-2">
 
             <div class="col-span-4">
@@ -127,9 +128,10 @@
             </div>
 
 
+
             <div class="col-span-4 flex justify-center items-start flex-col gap-4 p-4">
 
-                <h1 class="lg:text-6xl text-4xl font-black leading-32">Create and Talk to you a Virtual Charcter.</h1>
+                <h1 class="lg:text-6xl text-4xl font-black leading-32">Create and Talk to a Virtual Charcter.</h1>
 
                 <div class="gap-4">
                     <button data-modal-target="default-modal" data-modal-toggle="default-modal"
@@ -144,6 +146,9 @@
 
 
         </div>
+
+        <h2 class="text-2xl font-bold text-center mt-12">Try Characters</h2>
+        <div id="ccontainer" class="py-8 grid lg:grid-cols-4 grid-cols-2 gap-8 justify-center items-center"></div>
 
 
 
